--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="registrar">Registrar</string>
     <string name="actualizar">Actualizar</string>
     <string name="eliminar">Eliminar</string>
+    <string name="volver"><![CDATA[<--]]></string>
+    <string name="mostar">Mostrar</string>
 </resources>
